Fix: navigation not aligned with document

--- a/main.css
+++ b/main.css
@@ -62,9 +62,10 @@ vellum-doc {
   padding-right: 0;
 }
 
-#document > section {
-  padding-left: 2em;
-  padding-right: 2em;
+#document > section,
+nav {
+  padding-left: 4em;
+  padding-right: 4em;
 }
 
 h1,
